<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.matic.lugarenelbar.NuevoBarActivity"
    tools:showIn="@layout/activity_nuevo_bar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.89"
            android:scrollbarSize="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/nombre_legal_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nombre_legal_bar"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:paddingTop="10dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nombre_fantasia_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nombre_fantasia_bar"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:paddingTop="10dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_tel"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/prompt_usarMiUbicacion"
                        android:id="@+id/textView6"
                        android:paddingTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/btn_miubicacion"
                        android:background="@drawable/ic_action_milocation"
                        android:layout_marginLeft="20dp"
                        android:padding="5dp"
                        android:onClick="miLocation"
                        android:elevation="5dp" />


                </LinearLayout>

                <View
                    android:layout_width="230dp"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="0dp"
                    android:alpha="10" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <EditText
                            android:id="@+id/calle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_calle"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <EditText
                            android:id="@+id/numero_calle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_numeroCalle"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_ciudad"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/pais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_pais"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>




                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:gravity="bottom"
                    android:layout_marginTop="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView5"
                        android:paddingTop="25dp"
                        android:text="@string/prompt_logo"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/btn_uploadlogo"
                        android:background="@drawable/ic_action_upload_logo"
                        android:layout_marginLeft="40dp"
                        android:elevation="5dp" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/btn_camera"
                        android:background="@drawable/ic_action_camera"
                        android:layout_marginLeft="10dp"
                        android:elevation="5dp"
                        android:visibility="gone" />


                </LinearLayout>

                <View
                    android:layout_width="230dp"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="0dp"
                    android:alpha="10" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/imageView_logo"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>



        </ScrollView>

    </LinearLayout>



</RelativeLayout>